--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.jumbotron {
+    padding: 3rem 2rem;
+    margin-bottom: 2rem;
+    border-radius: .3rem;
+  }
